deployment/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: factorybrain
  labels:
    name: factorybrain
    environment: production
